# pos-

./: ARCHITECTURE.md  DEVELOPMENT.md  README.md  package.json
src/: routeTree.gen.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  scheduler.rs
src-tauri/src/commands/: auth.rs  backup.rs  customers.rs  inventory.rs  mod.rs  products.rs  receipt.rs  reports.rs  sales.rs
src-tauri/src/db/: mod.rs
src-tauri/src/utils/: crypto.rs  validation.rs
src/components/: AppLayout.tsx  Sidebar.tsx  Topbar.tsx
src/components/ui/: chart.tsx
src/lib/: format.ts  i18n.ts  store.ts
src/pages/: Dashboard.tsx
src/pages/modules/: Customers.tsx  POS.tsx  Products.tsx  Reports.tsx  Settings.tsx
src/routes/: __root.tsx  categories.tsx  customers.tsx  index.tsx  inventory.tsx  pos.tsx  products.tsx  reports.tsx  settings.tsx  suppliers.tsx
